fix sites seeding and blurring issues in long form - still need sites filtering with js

--- a/app/assets/stylesheets/new_identity.css.scss
+++ b/app/assets/stylesheets/new_identity.css.scss
@@ -123,13 +123,15 @@ main.new-gold-standard {
         div.gold_standard_identity_group_id,
         div.gold_standard_identity_village_id,
         div.idp_trajectory_province_id,
-        div.idp_trajectory_territory_id,
-        div.idp_trajectory_collective_id,
-        div.idp_trajectory_group_id,
-        div.idp_trajectory_village_id{
+        div.idp_trajectory_village_id,
+        div.idp_trajectory_site_id{
          select {
            width: 130px;
          }
+        }
+
+        div.idp_trajectory_territory_id{
+          margin-right: 92px;
         }
 
         div.gold_standard_identity_alternate_village {
